# rust-practice

./: .gitignore  Cargo.toml  README.md  format_sql.py
qdrant-test/: Cargo.toml
qdrant-test/src/: main.rs
sqlparser-test-pass/: Cargo.toml  sql_tspider.csv  tspider_parser_error.csv  tspider_parser_success.csv
sqlparser-test-pass/src/: doris.rs  main.rs  minutex_sql_dedup.rs  remove_dup.rs  starrocks.rs
src/log-format-json/: Cargo.toml
src/log-format-json/src/: main.rs
src/rust_decimal/: Cargo.toml
src/rust_decimal/src/: lib.rs
