[package]
name = "sqlparser-test-pass"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlparser = { git = "https://github.com/BKBASE-Plugin/datafusion-sqlparser-rs", rev = "2b7c0828a24a4fe072e01fce1c2ab0ec24ee8795",features = [
    "serde",
    "visitor",
    "sqlparser_derive",
] }
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
csv = "1.2"
futures = "0.3"
num_cpus = "1.0"
regex = "1.10.4"
