[package]
name = "log-format-json"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "fmt"] }
serde.workspace = true
serde_json.workspace = true
once_cell = "1.18.0"
atty = "0.2.14"
tokio.workspace = true